--- a/src/styles/task.css
+++ b/src/styles/task.css
@@ -11,3 +11,13 @@
 .task-action {
     cursor:pointer;
 }
+
+.task-completed {
+    color: gray;
+    text-decoration:line-through
+}
+
+.task-pending {
+    font-weight: bold;
+    color: tomato
+}
